修改swag文档描述
