# docs/swagger.json
@@ -1,28 +1,49 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "{{.Description}}",
-        "title": "{{.Title}}",
+        "description": "目前仅仅是一个demo",
+        "title": "Rest API",
         "contact": {},
         "license": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
     "paths": {
         "/Login": {
             "post": {
-                "description": "验证用户名密码有效性 accountName=aaa\u0026passWord=base64(bbb)",
+                "description": "验证用户名密码有效性 accountName=aaa\u0026passWord=base64(bbb) 成功输出Token",
                 "consumes": [
                     "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "登录验证服务",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "yxw",
+                        "description": "用户名",
+                        "name": "accountName",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "123",
+                        "description": "密码",
+                        "name": "passWord",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "{\"Code\":1,\"Data\":{},\"Message\":\"\"} or {\"Code\":-1,\"Data\":{},\"Message\":\"错误提示\"}",
+                        "description": "{\"Code\":1,\"Data\":{Token},\"Message\":\"\"} or {\"Code\":-1,\"Data\":{},\"Message\":\"错误提示\"}",
                         "schema": {
                             "type": "string"
                         }
